fix: text align on button

--- a/src/components/HomePage/index.scss
+++ b/src/components/HomePage/index.scss
@@ -30,8 +30,8 @@
     }
 
     .homepage-top-menu {
-      min-width: 100%;
       display: flex;
+      min-width: 100%;
       min-height: 3rem;
       max-height: 3rem;
       overflow-y: auto;
@@ -62,7 +62,7 @@
     max-width: 15%;
     height: 100vh;
     padding-right: 1em;
-    margin-left: .5em;
+    margin-left: 0.5em;
     display: grid;
     place-content: center;
     // border: 1px solid red;
@@ -106,6 +106,7 @@
     border-left: 1px var(--border-color);
     border-right: 1px var(--border-color);
     button {
+      border:none;
       color: white;
       width: 100%;
       height: 3vh;
@@ -118,54 +119,56 @@
     }
   }
 
-  .single-post {
-    display: flex;
-    margin-top: 1%;
-    width: 100%;
-    border-bottom: 1px var(--border-color);
+  .homepage-bottom-page {
+    .single-post {
+      display: flex;
+      margin-top: 1%;
+      width: 100%;
+      border-bottom: 1px var(--border-color);
 
-    &:hover {
-      box-shadow: 0 4px 6px rgba(183, 178, 178, 0.1);
-    }
+      &:hover {
+        box-shadow: 0 4px 6px rgba(183, 178, 178, 0.1);
+      }
 
-    .post-info {
-      //   border: 1px solid rgba(238, 237, 239, 0.631);
-      padding: 1em 2em 1em 2em;
-    }
+      .post-info {
+        //   border: 1px solid rgba(238, 237, 239, 0.631);
+        padding: 1em 2em 1em 2em;
+      }
 
-    .website-preview {
-      margin-left: auto;
-      width: 10%;
-    }
+      .website-preview {
+        
+        margin-left: auto;
+        width: 10%;
+      }
 
-    .post-username {
-      font-size: 0.7em;
-      color: rgb(101, 101, 174);
-      font-weight: 900;
-    }
+      .post-username {
+        font-size: 0.7em;
+        color: rgb(101, 101, 174);
+        font-weight: 900;
+      }
 
-    .post-title {
-      font-size: 0.9em;
-      font-weight: 900;
-      text-shadow: 1px 1px 1px black;
-    }
-    .post-tech-stack {
-      font-size: 0.7em;
-      
-    }
+      .post-title {
+        font-size: 0.9em;
+        font-weight: 900;
+        text-shadow: 1px 1px 1px black;
+      }
+      .post-tech-stack {
+        font-size: 0.7em;
+      }
 
-    .website-preview {
-      border: 1px solid red;
-      button {
-        width: 100%;
-        height: 100%;
+      .website-preview {
+        border: 1px solid red;
+        button {
+          width: 100%;
+          height: 100%;
+        }
       }
     }
-  }
-  button {
-    border: none;
-  }
-  img {
-    min-width: 40%;
+    button {
+      border: none;
+    }
+    img {
+      min-width: 40%;
+    }
   }
 }
