--- a/src/components/UserLogin/index.scss
+++ b/src/components/UserLogin/index.scss
@@ -37,23 +37,24 @@
         font-size: 2em;
       }
     }
-
-    button {
-      min-width: 100%;
-      height: 3vh;
+    .form-button{
       
-      font-size: 1.5rem;
-      background-color: #007bff;
-    
-      color: #fff;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-
-      &:hover {
-        background-color: #0056b3;
+      button {
+        min-width: 100%;
+        min-height: 3vh;
+        font-size: 1.2rem;
+        background-color: #007bff;
+        color: #fff;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        text-align: center;
+        transition: background-color 0.3s ease;
+        &:hover {
+          background-color: #0056b3;
+        }
       }
     }
+
   }
 }
